--- a/YuZhiLai2/app/src/main/res/values/colors.xml
+++ b/YuZhiLai2/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorYellow">#ffd300</color>
+    <color name="colorGray">#B3B3B3</color>
 </resources>
